commit primeiras validacoes.

--- a/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/index.html
+++ b/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/index.html
@@ -13,8 +13,10 @@
     </head>
     <body>
         <h1>Sistema desenvolvido por Marcelo Augusto Kaufmann para teste da empresa Softplan</h1>
-        <h3><a href="/usuarios" class="waves-effect waves-light btn"><i class="material-icons left">account_circle</i>Usuário</a></h3>
-        <h3><a href="/processos" class="waves-effect waves-light btn"><i class="material-icons left">content_copy</i>Processo</a></h3>
+        <h3><a href="/usuarios" class="waves-effect waves-light btn"><i class="material-icons left">account_circle</i>Usuários (Admin)</a></h3>
+        <h3><a href="/processos" class="waves-effect waves-light btn"><i class="material-icons left">content_copy</i>Processos (Triador)</a></h3>
+        <!--<h3><a href="/processos" class="waves-effect waves-light btn"><i class="material-icons left">content_copy</i>Processos (Finalizador)</a></h3>-->
+        <!--<h3><a href="/iniciarUsuarios" class="waves-effect waves-light btn"><i class="material-icons left">build</i>Criptografia inicial</a></h3>-->
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
