--- a/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/processo/detalhesProcesso.html
+++ b/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/processo/detalhesProcesso.html
@@ -21,8 +21,8 @@
                 <p>Parecer: <span th:text="${processo.parecerProcesso}"></span></p>
                 <p>Pendente de parecer: <span th:text="${processo.pendenteParecer}"></span></p>
             </div>
-
-            <!-- <form method="post">
+            <!-- <th:block th:include="mensagemValidacao"></th:block>
+            <form method="post">
                 Usuário: combo de usuarios para selecao
                 <button class="waves-effect waves-light btn" type="submit"> Adicionar</button>
             </form> -->
