--- a/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/usuario/formUsuario.html
+++ b/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/usuario/formUsuario.html
@@ -16,6 +16,9 @@
         <h1>Cadastro de Usuários:</h1>
         <h3><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></h3>
         <h3><a href="/usuarios" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Usuários</a></h3>
+
+        <th:block th:include="mensagemValidacao"></th:block>
+
         <form class="container" method="post">
             Login: <input type="text" value="" name="login">
             Nome Completo: <input type="text" value="" name="nomeCompleto">
