--- a/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/processos.html
+++ b/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/processos.html
@@ -10,11 +10,21 @@
 
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+        <link rel="stylesheet" href="style/styleCss.css"/>
     </head>
     <body>
-        <h1>Lista de Processos:</h1>
-        <h3><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></h3>
-        <h3><a href="/processos/cadastrarProcesso" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Processo</a></h3>
+        <header>
+            <nav class="menu">
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo">&nbsp;Lista de Processos</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="/processos/cadastrarProcesso" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Processo</a></li>
+                        <li><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
         <table class="container">
             <thead>
                 <tr>
