--- a/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/usuario/detalhesUsuario.html
+++ b/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/usuario/detalhesUsuario.html
@@ -10,12 +10,23 @@
 
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+        <link rel="stylesheet" href="style/styleCss.css"/>
     </head>
     <body>
-        <h1>Usuário:</h1>
-        <h3><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></h3>
-        <h3><a href="/usuarios" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Usuários</a></h3>
-        <div th:each="usuario : ${usuario}" class="container">
+        <header>
+            <nav class="menu">
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo">&nbsp;Usuário</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="/usuarios" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Usuários</a></li>
+                        <li><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <div th:each="usuario : ${usuario}" class="container detalhesUsuario">
+            <h5>Detalhes do Usuário</h5>
             <div class="row">
                 <p>Login: <span th:text="${usuario.login}"></span></p>
                 <p>Nome Completo: <span th:text="${usuario.nomeCompleto}"></span></p>
