--- a/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/usuario/formUsuario.html
+++ b/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/usuario/formUsuario.html
@@ -10,22 +10,34 @@
 
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
         <link rel="stylesheet" href="style/styleCss.css"/>
     </head>
     <body>
-        <h1>Cadastro de Usuários:</h1>
-        <h3><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></h3>
-        <h3><a href="/usuarios" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Usuários</a></h3>
+        <header>
+            <nav class="menu">
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo">&nbsp;Cadastro de Usuários</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="/usuarios" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Usuários</a></li>
+                        <li><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 
         <th:block th:include="mensagemValidacao"></th:block>
 
-        <form class="container" method="post">
-            Login: <input type="text" value="" name="login">
-            Nome Completo: <input type="text" value="" name="nomeCompleto">
-            Senha: <input type="text" value="" name="senha">
+        <div class="container formUsuario">
+            <form class="container" method="post">
+                Login: <input type="text" value="" name="login">
+                Nome Completo: <input type="text" value="" name="nomeCompleto">
+                Senha: <input type="text" value="" name="senha">
 
-            <button class="waves-effect waves-light btn" type="submit">Salvar</button>
-        </form>
+                <button class="waves-effect waves-light btn" type="submit">Salvar</button>
+            </form>
+        </div>
+
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
     </body>
