--- a/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/usuarios.html
+++ b/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/usuarios.html
@@ -10,17 +10,28 @@
 
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+        <link rel="stylesheet" href="style/styleCss.css"/>
     </head>
     <body>
-        <h1>Lista de Usuários:</h1>
-        <h3><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></h3>
-        <h3><a href="/usuarios/cadastrarUsuario" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Usuário</a></h3>
+        <header>
+            <nav class="menu">
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo">&nbsp;Lista de Usuários</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="/usuarios/cadastrarUsuario" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Usuário</a></li>
+                        <li><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
         <table class="container">
             <thead>
                 <tr>
                     <th>Login</th>
                     <th>Nome Completo</th>
                     <th>Senha</th>
+                    <th>Excluir</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,6 +40,7 @@
                         <td><a th:href="${(#mvc.url('UC#detalhesUsuario').arg(0, usuario.login)).build()}"><span th:text="${usuario.login}"></span></a></td>
                         <td><span th:text="${usuario.nomeCompleto}"></span></td>
                         <td><span th:text="${usuario.senha}"></span></td>
+                        <td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('UC#deletarUsuario').arg(0, usuario.login)).build()}"><i class="material-icons left">delete</i></a></td>
                     </div>
                 </tr>
             </tbody>
