--- a/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/processo/detalhesProcessoTriador.html
+++ b/softplan-desafio-fullstack-marcelo-kaufmann/src/main/resources/templates/processo/detalhesProcessoTriador.html
@@ -19,7 +19,7 @@
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo">&nbsp;Processo</a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a href="/processos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Processos</a></li>
+                        <li><a href="/processosTriador" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Processos</a></li>
                         <li><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>Início</a></li>
                     </ul>
                 </div>
